Explain the point of a shared space in docs
Authored-by: Merric de Launey <mdelauney@pivotal.io>

--- a/docs/v3/source/includes/resources/routes/_share_routes.md.erb
+++ b/docs/v3/source/includes/resources/routes/_share_routes.md.erb
@@ -1,6 +1,6 @@
 ### Share a route with other spaces (experimental)
 
-This endpoint shares the route with the specified spaces. In order to share into a space the requesting user must have write permission in the target space.
+This endpoint shares the route with the specified spaces. This allows users with read and write access in both the route's space and a shared space to bind a route to an app in the shared space. In order to share into a space the requesting user must have write permission in the target space.
 
 ```
 Example Request
