--- a/docs/v3/source/includes/resources/organizations/_list_users.md.erb
+++ b/docs/v3/source/includes/resources/organizations/_list_users.md.erb
@@ -31,7 +31,8 @@ Retrieve all users with a role in the specified organization.
 Name | Type | Description
 ---- | ---- | ------------
 **guids** | _list of strings_ | Comma-delimited list of user guids to filter by
-**usernames** | _list of strings_ | Comma-delimited list of usernames to filter by
+**usernames** | _list of strings_ | Comma-delimited list of usernames to filter by. Mutually exclusive with **partial_usernames**
+**partial_usernames** | _list of strings_ | Comma-delimited list of strings to search by. When using this query parameter, all the users that contain the string provided in their username will be returned. Mutually exclusive with **usernames**
 **origins** | _list of strings_ | Comma-delimited list of user origins (user stores) to filter by, for example, users authenticated by UAA have the origin "uaa"; users authenticated by an LDAP provider have the origin "ldap"; when filtering by origins, usernames must be included
 **page** | _integer_ | Page to display; valid values are integers >= 1
 **per_page** | _integer_ | Number of results per page; <br>valid values are 1 through 5000
